@@ -1,6 +1,9 @@
 source 'https://rubygems.org'
 
-gem 'sysaid'            # for SysAid integration
-gem 'ruby-ldap'         # for LDAP integration
-gem 'daemons'           # for 'daemon-izing' the script
-gem 'slack-ruby-client' # for Slack support
+gem 'sysaid'               # for SysAid integration
+gem 'ruby-ldap'            # for LDAP integration
+gem 'daemons'              # for 'daemon-izing' the script
+gem 'slack-ruby-client'    # for Slack support
+
+# for Roles Management support
+gem 'roles-management-api', git: "https://github.com/dssit/roles-management-api.git"
