@@ -10,3 +10,7 @@ LDAP_BASE_PW: ""
 LDAP_SEARCH_DN: ""
 
 SLACK_API_TOKEN: ""
+
+ROLES_URL: ""
+ROLES_USERNAME: ""
+ROLES_TOKEN: ""
